kubernetes/prd/k8s-deployment.yaml
# k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vg-hc-store-react
  namespace: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vg-hc-store-react
  template:
    metadata:
      labels:
        app: vg-hc-store-react
    spec:
      containers:
        - name: vg-hc-store-react
          image: registry-gitlab-front-end-vg-hc-store-react:main
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: vg-hc-store-react-nginx-conf
