kubernetes/prd/k8s-service.yaml
# k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vg-hc-store-react-service
  namespace: main
spec:
  selector:
    app: vg-hc-store-react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
